Issue #1355 : Adding Icon pause for view manager

--- a/admin/themes/default/fontello/config.json
+++ b/admin/themes/default/fontello/config.json
@@ -777,6 +777,12 @@
       "src": "elusive"
     },
     {
+      "uid": "0b28050bac9d3facf2f0226db643ece0",
+      "css": "pause",
+      "code": 59484,
+      "src": "fontawesome"
+    },
+    {
       "uid": "7411608e7611ffd477aeec7d239f87e9",
       "css": "dice",
       "code": 59401,
